--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "clsx": "^2.1.1",
     "commander": "^12.1.0",
     "lucide-react": "^0.460.0",
-    "next": "15.0.3",
-    "next-auth": "^5.0.0-beta.25",
+    "next": "^15.1.7",
+    "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swr": "^2.2.5",
